--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -138,12 +138,19 @@ main .content .content-banner .banner-body {
   width: 40px;
 }
 main .content .content-banner .banner-center {
+  position: relative;
   width: 45%;
   padding: 0px 20px 0px 80px;
   display: flex;
   flex-direction: column;
   justify-content: center;
 }
+
+/* main .content .content-banner .banner-center .text h2,
+main .content .content-banner .banner-center .text h1,
+main .content .content-banner .banner-center .text p {
+  position: absolute;
+} */
 main .content .content-banner .banner-center .text h2 {
   color: var(--banner-job-color);
 }
@@ -159,11 +166,12 @@ main .content .content-banner .banner-right {
   background-size: 75%;
   display: flex;
   align-items: top;
+  /* padding: 40px; */
   justify-content: center;
 }
 
 main .content .content-banner .banner-right .me {
-  height: 77vh;
+  width: 330px;
 }
 /* main .content .content-banner .banner-right .me:hover {
   left: 50px;
@@ -283,7 +291,6 @@ main .content .content-skills {
 }
 /* Create four equal columns that sits next to each other */
 #gallery .body .column .row {
-  /* width: 100%; */
   padding: 5px;
   display: flex;
   align-items: center;
